force-app/main/default/objects/Calendly_Settings__c/Calendly_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Provide configurations for Calendly integration</description>
    <label>Calendly Settings</label>
</CustomObject>