force-app/main/default/objects/Calendly_Settings__c/fields/Base_Booking_URL__c.field-meta.xml
<CustomField>
    <fullName>Base_Booking_URL__c</fullName>
    <description>Populate Calendly booking URL</description>
    <inlineHelpText>Populate Calendly booking URL</inlineHelpText>
    <label>Base Booking URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>