force-app/main/default/objects/Calendly_Settings__c/fields/Calendly_Script_URL__c.field-meta.xml
<CustomField>
    <fullName>Calendly_Script_URL__c</fullName>
    <label>Calendly Script URL</label>
    <type>Url</type>
</CustomField>