force-app/main/default/objects/Calendly_Settings__c/fields/Hide_Event_Type_Details__c.field-meta.xml
<CustomField>
    <fullName>Hide_Event_Type_Details__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select to hide event type details</description>
    <inlineHelpText>Select to hide event type details</inlineHelpText>
    <label>Hide Event Type Details</label>
    <type>Checkbox</type>
</CustomField>